--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@ input {
   margin: 0.3em;
 }
 
+/* input:hover {
+  border-radius: 0px;
+  border-bottom: 2px solid black;
+} */
+
 img {
   margin: 1em;
   height: 24em;
@@ -128,6 +133,10 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.photo:hover {
+  box-shadow: 1px 1px 10px black;
 }
 
 .logo {
